# deal-sourcing

./: .env.example  .gitignore  .pre-commit-config.yaml  audit_trail.jsonl  docker-compose.yml  pyproject.toml  spec-v0.md
docs/: alpha-detection.md  comparable-transactions.md  data-research.md  monte-carlo-irr-simulation.md  pipeline.md  sec-edgar-api-reference.md  sensitivity-analysis-tornado-chart.md  shadow-valuation-engine.md
docs/future_work/: feast-feature-store.md  kafka-event-streaming.md  mlflow-experiment-tracking.md  redis.md
droid-implementation/: pipeline-spec.md
pipelines/: definitions.py
src/: bulk_ingest.py  cli.py  data_viewer.py
src/alpha_detection/: __init__.py  scorer.py
src/common/: __init__.py  audit.py  compliance.py  config.py  dataset.py  entity.py  logging.py
src/common/schemas/: __init__.py  feedback.py  ingestion.py  outreach.py  signals.py  underwriting.py  valuation.py
src/entity_resolution/: __init__.py  blocking.py  clustering.py  engine.py  matching.py
src/feedback/: drift_detection.py
src/ingestion/: enrichment.py
src/ingestion/connectors/: __init__.py  base.py  claude_research.py  crunchbase.py  edgar_private.py  fmp.py  job_postings.py  pitchbook.py  sec_edgar.py  usaspending.py  yfinance_connector.py
src/ingestion/normalizers/: company.py
src/ingestion/orchestration/: assets.py
src/outreach/: drafting.py
src/signal_detection/: features.py  model.py  scoring.py
src/terminal/: __init__.py  __main__.py  app.py
src/thesis_matching/: hard_filter.py  semantic_matcher.py  thesis_schema.py
src/underwriting/: monte_carlo.py
src/valuation/: confidence.py  engine.py  margin_estimator.py  multiple_predictor.py  revenue_estimator.py
tests/: conftest.py
tests/unit/: test_drift_detection.py  test_entity_resolution.py  test_hard_filter.py  test_logging.py  test_monte_carlo.py  test_schemas.py
theses/: healthcare-it-rollup.yaml
