[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deal-sourcing"
version = "0.1.0"
description = "AI-powered private equity deal sourcing pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "structlog>=24.0",
    "uuid7>=0.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ingestion = [
    "dagster>=1.7,<2.0",
    "dagster-webserver>=1.7,<2.0",
    "dagster-postgres>=0.23",
    "sqlalchemy>=2.0,<3.0",
    "pyarrow>=15.0",
    "deltalake>=0.17",
]
ml = [
    "xgboost>=2.0,<3.0",
    "lightgbm>=4.0,<5.0",
    "scikit-learn>=1.4,<2.0",
    "shap>=0.45",
    "mapie>=0.9",
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "mlflow>=2.12,<3.0",
]
entity-resolution = [
    "datasketch>=1.6",
    "jellyfish>=1.0",
    "networkx>=3.2",
]
feature-store = [
    "feast>=0.38",
]
llm = [
    "anthropic>=0.25",
    "tiktoken>=0.7",
    "langchain-core>=0.2",
    "langchain-anthropic>=0.1",
    "pgvector>=0.3",
    "pymupdf>=1.24",
    "unstructured>=0.13",
]
free-data = [
    "yfinance>=0.2",
    "edgartools>=5.0",
]
embedding = [
    "sentence-transformers>=3.0",
    "torch>=2.2",
]
monitoring = [
    "evidently>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
all = [
    "deal-sourcing[ingestion,ml,entity-resolution,feature-store,llm,embedding,monitoring,free-data,dev]",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]
